--- a/Index.html
+++ b/Index.html
@@ -1,95 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Flavienne's Resume</title>
-  <link rel="stylesheet" href="Styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-</head>
-<body>
-  <header>
-    <nav class="navbar">
-      <h1 class="logo">Flavienne BENIHIRWE</h1>
-      <ul class="nav-links">
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Flavienne's Resume</title>
+    <link rel="stylesheet" href="Styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <nav class="navbar">
+        <h1 class="logo">Flavienne BENIHIRWE</h1>
+        <ul class="nav-links">
+          <li><a href="#about">About</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+        <button onclick="openNav()" class="toggle">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="24px"
+            viewBox="0 -960 960 960"
+            width="24px"
+            fill="#1f1f1f"
+          >
+            <path
+              d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"
+            />
+          </svg>
+        </button>
+      </nav>
+      <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+          >&times;</a
+        >
+        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#experience">Experience</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+      </div>
+    </header>
+
+    <section id="hero">
+      <div class="hero-content">
+        <img src="images/1st Fav.JPG" alt="My favourite" class="profile-pic" />
+        <h2>Hello, I'm Flavienne BENIHIRWE</h2>
+        <p>Aspiring Frontend Developer | Creative Technologist</p>
+      </div>
+    </section>
+
+    <section id="about">
+      <h2>About Me</h2>
+      <p>
+        My journey into software development began with a deep curiosity about
+        how technology shapes the way we live and connect.<br />
+        During high school, I often heard older students say that software and
+        coding weren’t meant for girls. Rather than accept that narrative, I
+        chose to challenge it, and I joined the field to prove them wrong. What
+        started as a response to doubt quickly grew into a passion for building
+        meaningful, user-friendly digital experiences.<br />
+        I particularly enjoy front-end development because it allows me to blend
+        creativity with logic, and to bring ideas to life on the web. <br />
+        Today, I’m committed to using technology not just as a tool, but as a
+        force for empowerment, inclusion, and cultural expression.
+      </p>
+    </section>
+
+    <section id="skills">
+      <h2>Skills</h2>
+      <ul class="skills-list">
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>Python</li>
+        <li>Git & GitHub</li>
       </ul>
-    </nav>
-  </header>
+    </section>
 
-  <section id="hero">
-    <div class="hero-content">
-      <img src="images/1st Fav.JPG" alt="My favourite" class="profile-pic" />
-      <h2>Hello, I'm Flavienne BENIHIRWE</h2>
-      <p>Aspiring Frontend Developer | Creative Technologist</p>
-    </div>
-  </section>
+    <section id="experience">
+      <h2>Experience</h2>
+      <article>
+        <h3>Intern – N@tcom</h3>
+        <p><strong>Kigali</strong> | March 2023 – May 2023</p>
+        <p>
+          Participated in a high school internship program focused on
+          understanding IT infrastructure and computer networking.<br />
+          Although the sessions were introductory due to group-level mismatches,
+          I took initiative to explore more advanced topics independently,<br />
+          helping peers understand basic concepts and asking deeper questions to
+          enrich the experience.
+        </p>
+      </article>
+    </section>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>My journey into software development began with a deep curiosity about how technology shapes the way we live and connect.<br>
-      During high school, I often heard older students say that software and coding weren’t meant for girls. Rather than accept that narrative, I chose to challenge it, and I joined the field to prove them wrong. What started as a response to doubt quickly grew into a passion for building meaningful, user-friendly digital experiences.<br>
-      I particularly enjoy front-end development because it allows me to blend creativity with logic, and to bring ideas to life on the web. <br>
-       Today, I’m committed to using technology not just as a tool, but as a force for empowerment, inclusion, and cultural expression.</p>
-  </section>
+    <section id="projects">
+      <h2>Projects</h2>
+      <div class="project">
+        <h3>Student Management System – Capstone Project</h3>
+        <p>
+          As part of a team project in Coding in Gap year program of The Gym (a
+          professional tech learning environment), I contributed to building a
+          Student Management System designed to streamline student records,
+          attendance, and course tracking. My role focused on the front-end,
+          where I built user-friendly interfaces using HTML, CSS, and JavaScript
+          to ensure a responsive and intuitive experience for both students and
+          administrators.
+        </p>
+      </div>
+    </section>
 
-  <section id="skills">
-    <h2>Skills</h2>
-    <ul class="skills-list">
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
-      <li>Python</li>
-      <li>Git & GitHub</li>
-    </ul>
-  </section>
+    <section id="contact">
+      <div class="contact-container">
+        <div class="contact-info">
+          <h2>Contact Me</h2>
+          <p>Kigali-Kicukiro<br />Flavienne<br /></p>
+          <p>Email: beniflavienne@gmail.com<br />Phone: +250 780473722</p>
+        </div>
 
-  <section id="experience">
-    <h2>Experience</h2>
-    <article>
-      <h3>Intern – N@tcom</h3>
-      <p><strong>Kigali</strong> | March 2023 – May 2023</p>
-      <p>Participated in a high school internship program focused on understanding IT infrastructure and computer networking.<br>
-         Although the sessions were introductory due to group-level mismatches, I took initiative to explore more advanced topics independently,<br>
-         helping peers understand basic concepts and asking deeper questions to enrich the experience.</p>
-    </article>
-  </section>
+        <form class="contact-form">
+          <input type="text" placeholder="Name" required />
+          <input type="email" placeholder="E-mail" required />
+          <textarea placeholder="Message" required></textarea>
+          <button type="submit">Send Message</button>
+        </form>
+      </div>
+    </section>
 
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="project">
-      <h3>Student Management System – Capstone Project</h3>
-      <p>As part of a team project in Coding in Gap year program of The Gym (a professional tech learning environment), I contributed to building a Student Management System designed to streamline student records, attendance, and course tracking. 
-        My role focused on the front-end, where I built user-friendly interfaces using HTML, CSS, and JavaScript to ensure a responsive and intuitive experience for both students and administrators.</p>
-    </div>
-  </section>
+    <footer>
+      <p>&copy; 2025 Flavienne. All rights reserved.</p>
+    </footer>
 
-  <section id="contact">
-    <div class="contact-container">
-    <div class="contact-info">
-     <h2>Contact us</h2>
-     <p>Kigali-Kicukiro<br>Flavienne<br></p>
-     <p>Email: beniflavienne@gmail.com<br>Phone: +250 780473722</p>
-   </div>
-
-<form class="contact-form">
-  <input type="text" placeholder="Name" required>
-  <input type="email" placeholder="E-mail" required>
-  <textarea placeholder="Message" required></textarea>
-  <button type="submit">Send Message</button>
-</form>
-</div>
-</section>
-
-  <footer>
-    <p>&copy; 2025 Flavienne. All rights reserved.</p>
-  </footer>
-
-  <script src="script.js"></script>
-</body>
+    <script src="Script.js"></script>
+  </body>
 </html>
 
