--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flavienne's Resume</title>
-    <link rel="stylesheet" href="Styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap"
       rel="stylesheet"
@@ -142,7 +142,7 @@
       <p>&copy; <span id="fullyear"></span> Flavienne. All rights reserved.</p>
     </footer>
 
-    <script src="Script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
 
