--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <section id="hero">
       <div class="hero-content">
-        <img src="images/1st Fav.JPG" alt="My favourite" class="profile-pic" />
+        <img src="Images/1st Fav.JPG" alt="My favourite" class="profile-pic" />
         <h2>Hello, I'm Flavienne BENIHIRWE</h2>
         <p>Aspiring Frontend Developer | Creative Technologist</p>
       </div>
